create amusement park site with 3 rides

--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
       <title>Template</title>
     </head>
     <body>
-      <h1></h1>
-      <div>
+      <div class="heading">
+        <h1>Park of Fun (and lawsuits)</h1>
       </div>
-      <div></div>
-      <div></div>
+      <div class="container">
+        <div class="row" id="rides">
+          <div class="col-md-4" id="carousel">
+            <h2>The Lazy Carousel</h2>
+            <img class="image-responsive" src="img/carousel.jpg" alt="A slooooow carousel">
+          </div>
+          <div class="col-md-4" id="ship">
+            <h2>The Pirate Ship of Arrrsomeness!</h2>
+            <img class="image-responsive" src="img/ship.jpg" alt="A somewhat speedy pendulum ship">
+          </div>
+          <div class="col-md-4" id="coaster">
+            <h2>The DEATH spiral (ride at your own risk)</h2>
+            <img class="image-responsive" src="img/Rollercoaster.jpg" alt="A face-meltingly fast coaster of epic proportions.">
+          </div>
+        </div>
+      </div>
     </body>
   </html>
