add javascript interactivity

--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html>
     <head>
       <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-      <link href="css/styles.css" rel="stylesheet" type="text/css">
+      <link href="css/style.css" rel="stylesheet" type="text/css">
       <script src="js/jquery-3.1.0.js"></script>
       <script src="js/scripts.js"></script>
       <title>Template</title>
     </head>
     <body>
-      <div class="heading">
-        <h1>Park of Fun (and lawsuits)</h1>
+      <div class="container">
+        <div class="page-header">
+          <h1>Park of Fun (and lawsuits)</h1>
+        </div>
       </div>
       <div class="container">
-        <div class="row" id="rides">
+        <div class="row">
           <div class="col-md-4" id="carousel">
             <h2>The Lazy Carousel</h2>
-            <img class="image-responsive" src="img/carousel.jpg" alt="A slooooow carousel">
+            <img class="img-responsive" src="img/carousel.jpg" alt="A slooooow carousel">
           </div>
           <div class="col-md-4" id="ship">
             <h2>The Pirate Ship of Arrrsomeness!</h2>
-            <img class="image-responsive" src="img/ship.jpg" alt="A somewhat speedy pendulum ship">
+            <img class="img-responsive" src="img/ship.jpg" alt="A somewhat speedy pendulum ship">
           </div>
           <div class="col-md-4" id="coaster">
             <h2>The DEATH spiral (ride at your own risk)</h2>
-            <img class="image-responsive" src="img/Rollercoaster.jpg" alt="A face-meltingly fast coaster of epic proportions.">
+            <img class="img-responsive" src="img/Rollercoaster.jpg" alt="A face-meltingly fast coaster of epic proportions.">
           </div>
         </div>
       </div>
